fix background img so it doesn't shift

--- a/src/App.css
+++ b/src/App.css
@@ -24,6 +24,7 @@
   background-image: url('./components/images/SouthBDHubWatermarkBackground.png');
   background-size: cover;
   min-height: 100vh;
+  background-attachment: fixed;
 }
 
 .page-contain {
